k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hivebox
spec:
  selector:
    app: hivebox
  ports:
    - port: 80
      targetPort: 8000
