k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hivebox
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web  
spec: # information needed to configure a load balancer or proxy server.
  ingressClassName: traefik
  rules: # matched against all incoming requests
  - http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: hivebox
            port:
              number: 80
